Fix search bar icon alignment for tablet breakpoint

--- a/src/components/SearchBar/searchBar.scss
+++ b/src/components/SearchBar/searchBar.scss
@@ -14,7 +14,8 @@
     margin: 8px 6px;
 
     @media (min-width: $breakpoint-tablet) {
-      margin-right: 25px;
+      margin-left: 32px;
+      margin-right: 24px;
     }
   }
 
